service/tests/requests/snapshots/auth/when_email_is_invalid_validation_fails_and_no_reset_token_is_sent@auth.snap
---
source: tests/requests/auth.rs
assertion_line: 187
expression: "(response.status_code(), response.headers(),response.text())"
---
(
    400,
    {
        "content-type": "application/json",
        "content-length": "NUMBER",
    },
    "{\"error\":\"{\\\"email\\\":\\\"Invalid email address\\\"}\"}",
)
