service/tests/requests/snapshots/auth/when_email_is_not_an_email_registration_fails@auth.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.text())"
---
(
    400,
    "{\"error\":\"One or more fields failed validation\",\"code\":\"validation_error\",\"details\":{\"email\":\"Invalid email address\"}}",
)
