service/tests/requests/snapshots/auth/when_email_is_not_email_login_fails@auth.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.headers(),response.text())"
---
(
    400,
    {
        "content-type": "application/json",
        "content-length": "NUMBER",
    },
    "{\"error\":\"One or more fields failed validation\",\"code\":\"validation_error\",\"details\":{\"email\":\"Invalid email address\"}}",
)
