service/tests/requests/snapshots/auth/when_email_is_wrong_login_fails@auth.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.headers(),response.text())"
---
(
    401,
    {
        "content-type": "application/json",
        "content-length": "NUMBER",
    },
    "{\"error\":\"Invalid email or password\",\"code\":\"invalid_credentials\"}",
)
