service/tests/requests/snapshots/auth/when_image_is_invalid_registration_fails@auth.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.text())"
---
(
    400,
    "{\"error\":\"{\\\"image\\\":\\\"Invalid image URL\\\"}\"}",
)
