service/tests/requests/snapshots/auth/when_name_is_under_six_chars_registration_fails@auth.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.text())"
---
(
    400,
    "{\"error\":\"One or more fields failed validation\",\"code\":\"validation_error\",\"details\":{\"name\":\"Name requires 6 letters\"}}",
)
